2003-11-06  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* Makefile.am: Remove the GTK_DISABLE_DEPRECATED and
	GNOME_DISABLE_DEPRECATED definitions to unbreak the build (this
	applet uses GnomeColorPicker). Fixes bug #126245.

2003-11-01  Kjartan Maraas  <kmaraas@gnome.org>

	* load-graph.c: (load_graph_destroy): Merge fix for
	a leak from stable. Closes bug #125594.

Mon Sep 15 15:38:05 2003  George Lebl <jirka@5z.com>

	* main.c: when started in lockdown mode, hide the preferences item,
	  also hide the "run procman" item as it seems that would be harmful
	  in a locked down session no matter how you look at it, also
	  hide the procman launching if command line is inhibited since
	  then procman would really be likely harmful.

2003-08-09 John Fleck <jfleck@inkstain.net>

	* docs/C/Makefile.am
	* docs/C/multiload.xml
	adding updated docs from Chee Bin HOH

2003-08-08  Christian Neumair  <chris@gnome-de.org>

	* multiload.schemas.in: Commit patch from #116066.

2003-07-24  Kevin Vandersloot

	* schemas.in: Clean up strings as part of bug #116066

2003-07-21  Dennis Cranston <dennis_cranston at yahoo com>

	* properties.c:  HIGify widget padding between the vbox and 
	action area of the dialog.  Thanks to <chris@gnome-de.org> 
	Christian - Manny Calavera - Neumair.

2003-07-21  Kevin Vandersloot

	* load-graph.c: Fix sizing due to recent panel changes and make saner.

Wed Jul 09 12:24:32 2003  George Lebl <jirka@5z.com>

	* linux-proc.c: Fixed up the network code to read the correct fields,
	  not crash on unknown network types, stop memcpy/memset weirdness,
	  still utterly utterly horrible code though

	* properties.c: respect key writability

2003-06-19  Kevin Vandersloot

	* main.c: Clamp the percentage between 0 and 100. Fixes bug #107407

2003-06-05  Ray Strode  <halfline@hawaii.rr.com>

	* properties.c (color_picker_set_cb): Add missing check for
	load average property (bug #114477).
	
2003-06-02  Dennis Cranston <dennis_cranston at yahoo com>
