@@ -1,3 +1,7 @@
+2003-11-19  Kevin Vandersloot
+
+	* linux-proc.c: fix up memory reporting. Might fix bug #126461.
+
 2003-11-06  Malcolm Tredinnick <malcolm@commsecure.com.au>
 
 	* Makefile.am: Remove the GTK_DISABLE_DEPRECATED and
